// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty-open-and-close-php-tag.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
?>

=====================================output=====================================
<?php
?>

================================================================================
`;

exports[`empty-open-and-close-php-tag-1.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

?>

=====================================output=====================================
<?php

?>

================================================================================
`;

exports[`empty-open-and-close-php-tag-2.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


?>

=====================================output=====================================
<?php

?>

================================================================================
`;

exports[`empty-open-and-close-php-tag-3.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php ?>

=====================================output=====================================
<?php ?>

================================================================================
`;

exports[`newline.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

echo 'test';

=====================================output=====================================
<?php

echo "test";

================================================================================
`;

exports[`no-newline.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php
$test = 1;

=====================================output=====================================
<?php
$test = 1;

================================================================================
`;

exports[`single-open-php-tag.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php

=====================================output=====================================
<?php

================================================================================
`;

exports[`single-open-php-tag-extra-space.php 1`] = `
====================================options=====================================
parsers: ["php"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
<?php


=====================================output=====================================
<?php

================================================================================
`;
